# Mytorch

./: .gitignore  CMakeLists.txt  bind.cu  mytorch_mnist.py  nn.cuh  tensor.cu  tensor.cuh
src/: nn.cuh  tensor.cu  tensor.cuh
test/: test_act.py  test_ce.py  test_conv.py  test_fc.cu  test_fc.py  test_pool.py
